...
    <string name="tasks">Tasks</string>
    <string name="change_customer_status">Change the status of customer</string>
    <string name="activities">Activities</string>
    <string name="recent_activities">Recent activities</string>
    <string name="birthday">Birthday</string>
    <string name="assigned_employee">Assigned Employee </string>
    <string name="assigned_employee_list">Assigned Employee: %1$s</string>
    <string name="not_assigned">Not assigned</string>
    <string name="no_contact_details_available">No Contact details available</string>
    <string name="empty_customer_list">Empty customer list</string>
    <string name="empty_customer_loans">Empty customer loans list</string>
    <string name="empty_planned_payments">Empty planned payment list</string>
    <string name="no_more_customer_available">No more customer available</string>
...
